// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: create 1`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.azure.help"
    id="name.azure"
    onFieldChange={[MockFunction]}
    propKey="key"
    value=""
  />
  <AlmBindingDefinitionFormField
    help={
      <React.Fragment>
        settings.almintegration.form.url.azure.help1
        <br />
        <em>
          https://ado.your-company.com/your_collection
        </em>
        <br />
        <br />
        settings.almintegration.form.url.azure.help2
        <br />
        <em>
          https://dev.azure.com/your_organization
        </em>
      </React.Fragment>
    }
    id="url.azure"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value=""
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.personal_access_token.azure.help"
    id="personal_access_token"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    overwriteOnly={false}
    propKey="personalAccessToken"
    value=""
  />
</Fragment>
`;

exports[`should render correctly: edit 1`] = `
<Fragment>
  <AlmBindingDefinitionFormField
    autoFocus={true}
    help="settings.almintegration.form.name.azure.help"
    id="name.azure"
    onFieldChange={[MockFunction]}
    propKey="key"
    value="key"
  />
  <AlmBindingDefinitionFormField
    help={
      <React.Fragment>
        settings.almintegration.form.url.azure.help1
        <br />
        <em>
          https://ado.your-company.com/your_collection
        </em>
        <br />
        <br />
        settings.almintegration.form.url.azure.help2
        <br />
        <em>
          https://dev.azure.com/your_organization
        </em>
      </React.Fragment>
    }
    id="url.azure"
    maxLength={2000}
    onFieldChange={[MockFunction]}
    propKey="url"
    value=""
  />
  <AlmBindingDefinitionFormField
    help="settings.almintegration.form.personal_access_token.azure.help"
    id="personal_access_token"
    isTextArea={true}
    onFieldChange={[MockFunction]}
    overwriteOnly={true}
    propKey="personalAccessToken"
    value="asdf1234"
  />
</Fragment>
`;
